# xstatic-d3

./: .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py
xstatic/pkg/d3/: __init__.py
