[metadata]
name = XStatic-D3
description = D3 3.5.17 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = http://d3js.org/
keywords = d3 xstatic
license = BSD
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
